--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "jwt-decode": "^3.1.2",
     "openai": "^4.24.7",
     "react": "^18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "react-visibility-sensor": "^5.1.1",
     "redux-persist": "^6.0.0",
     "three": "^0.160.0",
     "vanta": "^0.5.24"
